app/styles/app.scss
@import "node_modules/bootswatch/dist/yeti/variables";
@import "node_modules/bootstrap/scss/bootstrap";
@import "node_modules/bootswatch/dist/yeti/bootswatch";

@import 'ember-power-select/themes/bootstrap';
@import "ember-power-select";
@import "ember-power-calendar";
.ember-power-calendar {
  @include ember-power-calendar($cell-size: 30px);
}

@import "z-depth";

// Ember link actions, or explicitally clickable.
a[data-ember-action]:not(:disabled),
.clickable {
    cursor: pointer;
}

// Form footer progress bars.
form .progress {
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
}

// Add styling to ember-notify alerts
.ember-notify.alert {
  box-shadow: $z-depth-2;
  border: none !important;
}

// The primary loading progress bar, found below nav.
.loading.progress {
  border-radius: 0 !important;
  height: 0.3rem;
}

// Add depth to dropdowns
.dropdown-menu {
  box-shadow: $z-depth-2;
  border: none !important;
}

// Add depth to modals
.modal-content {
  border: 0;
  box-shadow: $z-depth-3;
}

// Add depth to cards
.card.list-index, .card.model-form, .card.error {
  box-shadow: $z-depth-1;
  border: none !important;
}
.card.error {
  box-shadow: $z-depth-1-half;
}

// Force create button to bottom right; add depth
.fixed-bottom.create {
  left: inherit;
  border-top-right-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
  border-bottom-left-radius: 0 !important;
  box-shadow: $z-depth-2;
}

.ember-basic-dropdown-content {
  z-index: 10000;
}

.card .ember-power-calendar {
  min-height: 300px;
}

fieldset {
  border: 1px solid $gray-400;
  padding: 1em;
  position: relative;
}

legend {
  display: inline-block;
  width: auto;
  font-size: inherit;
}

.tab-content {
  padding: 1em;
  border: 1px solid #dee2e6;
  border-top: none;
}

.mh-100 {
  min-height: 100%;
}

.mxh-30 {
  max-height: 30px;
}

.t-0 {
  top: 0;
}

.r-0 {
  right: 0;
}

.cursor-pointer {
  cursor: pointer;
}

.b-0 {
  bottom: 0
}

.l-0 {
  left: 0;
}

.pe-none {
  pointer-events: none;
}

.background-trans-black {
  background: rgba(0,0,0,0.5);
}

.highcharts-credits {
  display: none !important;
}

